--- a/index.html
+++ b/index.html
@@ -321,6 +321,11 @@
     </footer>
 
     <script src="script.js"></script>
+    <section id="news" style="max-width: 900px; margin: 40px auto; padding: 0 16px;">
+  <h2>お知らせ</h2>
+  <div id="news-list">読み込み中...</div>
+</section>
+
 </body>
 
 </html>
